New Modification for invoice comparison
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44529

--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/InvoiceAction/Templates/CompareInvoiceActionTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Directives/Extensions/InvoiceAction/Templates/CompareInvoiceActionTemplate.html
@@ -117,4 +117,14 @@
                    label="Duration Measure">
         </vr-select>
     </vr-columns>
+    <vr-columns width="1/3row">
+        <vr-select datasource="scopeModel.measuresItemGroupings"
+                   datatextfield="FieldDescription"
+                   datavaluefield="MeasureItemFieldId"
+                   selectedvalues="scopeModel.selectedRateMeasure"
+                   entityname="Measuer"
+                   isrequired="true"
+                   label="Rate Measure">
+        </vr-select>
+    </vr-columns>
 </vr-row>
