--- a/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Views/InvoiceCompareTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Invoice.Web/WhS_Invoice/Views/InvoiceCompareTemplate.html
@@ -65,8 +65,8 @@
                                              pagingtype="'PagingOnScroll'"
                                              idfield="Entity.Destination" enableautoexport="true">
                                     <vr-datagridcolumn headertext="'Destination'" type="'Text'" field="'Entity.Destination'" widthfactor="20"></vr-datagridcolumn>
-                                    <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="10"></vr-datagridcolumn>
-                                    <vr-datagridcolumn headertext="'Curr.'" type="'Text'" field="'Entity.Currency'" fixedwidth="50"></vr-datagridcolumn>
+                                    <vr-datagridcolumn headertext="'Sys. Rate'" field="'Entity.SystemRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="10"></vr-datagridcolumn>
+                                    <vr-datagridcolumn headertext="'{{scopeModel.partnerAbbreviationLabel}} Rate'" field="'Entity.ProviderRate'" type="'Number'" numberprecision="'LongPrecision'" widthfactor="10"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'From'" field="'Entity.From'" type="'Date'" fixedwidth="80"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'Till'" field="'Entity.To'" type="'Date'" fixedwidth="80"></vr-datagridcolumn>
                                     <vr-datagridcolumn headertext="'Sys. Calls'" field="'Entity.SystemCalls'" type="'Number'" numberprecision="{{scopeModel.decimalDigits}}" widthfactor="10" cssclass="'bg-success'"></vr-datagridcolumn>
