--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SourceMigrationReader/Templates/SourceMigrationReader.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/MainExtensions/SourceMigrationReader/Templates/SourceMigrationReader.html
@@ -24,7 +24,7 @@
         <vr-common-ratetype-selector on-ready="onHolidayRateTypeSelectorReady" customlabel="Holiday Rate" isrequired="true" customvalidate="validateHolidayRate()"></vr-common-ratetype-selector>
     </vr-columns>
     <vr-columns colnum="6">
-        <vr-textbox value="defaultRate" type="number" label="Default Rate" minvalue="0"></vr-textbox>
+        <vr-textbox value="defaultRate" type="number" label="Default Rate"  customvalidate="validateDefaultRateValue()" isrequired></vr-textbox>
     </vr-columns>
     <vr-columns colnum="3">
         <vr-switch value="migratePriceListData" label="Pricelist Data"></vr-switch>
