--- a/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
+++ b/Retail/Code/Retail.MultiNet.Web/Retail_MultiNet/Directives/Account/Part/Runtime/Templates/AccountTypePartCompanyExtendedInfoRuntimeTemplate.html
@@ -15,7 +15,10 @@
         <vr-columns width="1/2row">
             <retail-multinet-accounttype-selector on-ready="scopeModel.onAccountTypeSelectorReady"></retail-multinet-accounttype-selector>
         </vr-columns>
-    </vr-row>
+        <vr-columns width="1/2row">
+            <vr-textbox value="scopeModel.assignedNumber" label="Assigned Number"></vr-textbox>
+        </vr-columns>
+</vr-row>
     <vr-row removeline>
         <vr-columns width="1/2row">
             <vr-switch value="scopeModel.excludeSaleTaxes" label="Exclude Sale Taxes"></vr-switch>
