Implementing is sent and is paid filter for invoices
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44563

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
@@ -15,6 +15,11 @@
                 <vr-columns width="normal">
                     <vr-datetimepicker type="date" label="Issue Date" value="scopeModel.issueDate"></vr-datetimepicker>
                 </vr-columns>
+            
+                <vr-common-boolean-selector label="Sent Invoice" on-ready="scopeModel.onInvoiceSentSelectorReady" normal-col-num="2"></vr-common-boolean-selector>
+              
+                <vr-common-boolean-selector label="Paid Invoice" on-ready="scopeModel.onInvoicePaidSelectorReady" normal-col-num="2"></vr-common-boolean-selector>
+      
             </vr-row>
         </div>
         <vr-row removeline>
