--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Views/GenericInvoiceManagement.html
@@ -16,9 +16,9 @@
                     <vr-datetimepicker type="date" label="Issue Date" value="scopeModel.issueDate"></vr-datetimepicker>
                 </vr-columns>
             
-                <vr-common-boolean-selector label="Sent Invoice" on-ready="scopeModel.onInvoiceSentSelectorReady" normal-col-num="2"></vr-common-boolean-selector>
+                <vr-common-boolean-selector label="Sent" on-ready="scopeModel.onInvoiceSentSelectorReady" normal-col-num="2"></vr-common-boolean-selector>
               
-                <vr-common-boolean-selector label="Paid Invoice" on-ready="scopeModel.onInvoicePaidSelectorReady" normal-col-num="2"></vr-common-boolean-selector>
+                <vr-common-boolean-selector label="Paid" on-ready="scopeModel.onInvoicePaidSelectorReady" normal-col-num="2"></vr-common-boolean-selector>
       
             </vr-row>
         </div>
