--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Directives/Extensions/AccountManager/Templates/AccountManagerAccountManagerAssignmentGrid.html
@@ -1,7 +1,7 @@
 ﻿<vr-datagrid datasource="accountManagerAssignments"
              on-ready="onGridReady"
              dataretrievalfunction="dataRetrievalFunction"
-             pagingtype="'PagingOnScroll'"
+             pagingtype="'Pager'"
              menuactions="gridMenuActions"
              enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'AccountManagerAssignementId'" type="'Text'"></vr-datagridcolumn>
