--- a/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
+++ b/Retail/Code/Retail.BusinessEntity.Web/Retail_BusinessEntity/Views/AccountManager/AccountManagerAssignmentEditor.html
@@ -9,8 +9,14 @@
                                 <span vr-disabled="scopeModel.disable">
                                     <retail-be-account-selector on-ready="scopeModel.onAccountSelectorReady" isrequired="true" ismultipleselection="true"></retail-be-account-selector>
                                 </span>
+
                             </vr-row>
                             <vr-directivewrapper directive="scopeModel.assignmentRuntime" on-ready="scopeModel.onRuntimeDirectiveReady" normal-col-num="4" isrequired="ctrl.isrequired"></vr-directivewrapper>
+                        </vr-columns>
+                        <vr-columns colnum="4">
+                            <span vr-disabled="scopeModel.accountManagerDisable">
+                                <vr-accountmanager-accountmanager-selector on-ready="scopeModel.onAccountManagerSelectorReady" isrequired="true"></vr-accountmanager-accountmanager-selector>
+                            </span>
                         </vr-columns>
                     </vr-row>
                     <vr-row>
@@ -22,22 +28,19 @@
                 <vr-tab header="'Time'">
                     <vr-row>
                         <vr-columns width="1/2row">
-                            <span vr-loader="scopeModel.isBeginEffectiveDateLoading">
                                 <vr-datetimepicker type="dateTime" value="scopeModel.beginEffectiveDate" label="BED" customvalidate="scopeModel.validateEffectiveDate()" isrequired></vr-datetimepicker>
-                            </span>
                         </vr-columns>
                         <vr-columns width="1/2row">
                             <vr-datetimepicker type="dateTime" value="scopeModel.endEffectiveDate" label="EED" customvalidate="scopeModel.validateEffectiveDate()"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
-                    <vr-row>
-                        <vr-columns width="fullrow" ng-if="scopeModel.errorMessage != undefined">
-                            <label class="alert alert-danger" vr-alert>{{scopeModel.errorMessage}}</label>
-                        </vr-columns>
-                    </vr-row>
                 </vr-tab>
-             
             </vr-tabs>
+            <vr-row>
+                <vr-columns width="fullrow" ng-if="scopeModel.errorMessage != undefined">
+                    <label class="alert alert-danger" vr-alert>{{scopeModel.errorMessage}}</label>
+                </vr-columns>
+            </vr-row>
         </vr-form>
     </vr-modalbody>
     <div>
