--- a/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
+++ b/Vanrise/Code/Vanrise.AccountManager.Web/VR_AccountManager/Elements/AccountManager/Directives/Template/AccountManagerGrid.html
@@ -1,7 +1,7 @@
 ﻿<vr-datagrid datasource="accountManagers"
              on-ready="onGridReady"
              dataretrievalfunction="dataRetrievalFunction"
-             pagingtype="'PagingOnScroll'"
+             pagingtype="'Pager'"
              menuactions="gridMenuActions"
              idfield="AccountManagerId"
              enableautoexport="true">
