--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/RecreateInvoiceBulkActionRuntimeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/RecreateInvoiceBulkActionRuntimeSettingsTemplate.html
@@ -1,1 +1,8 @@
-﻿
+﻿<vr-row>
+    <vr-columns width="1/2row">
+        <vr-switch value="scopeModel.includeSentInvoices" label="Inculde Sent Invoices"></vr-switch>
+    </vr-columns>
+    <vr-columns width="1/2row">
+        <vr-switch value="scopeModel.includePaidInvoices" label="Inculde Paid Invoices"></vr-switch>
+    </vr-columns>
+</vr-row>
