add ng-hide if recreated invoice menual
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44574

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Invoice/Templates/InvoiceGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/Invoice/Templates/InvoiceGridTemplate.html
@@ -7,7 +7,7 @@
                  idfield="Entity.InvoiceId"
                  defaultsortbyfieldname="'Entity.InvoiceId'" normalcell enableautoexport="true">
         <vr-datagridcolumn widthfactor="3" disablesorting ng-show="canSelectInvoices" isfielddynamic="true">
-            <span vr-disabled="dataItem.isDeleted">
+            <span ng-hide="dataItem.isDeleted">
                 <vr-check value="dataItem.isSelected" onvaluechanged="viewScope.scopeModel.onInvoiceSelect(dataItem)"></vr-check>
             </span>
         </vr-datagridcolumn>
