Edit services column width in routing product grid
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44584

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/RoutingProduct/Templates/RoutingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/RoutingProduct/Templates/RoutingProductGridTemplate.html
@@ -5,10 +5,10 @@
              on-ready="onGridReady"
              menuactions="gridMenuActions"
              idfield="Entity.RoutingProductId" enableautoexport="true">
-    <vr-datagridcolumn headertext="'ID'" field="'Entity.RoutingProductId'" widthfactor="5"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'ID'" field="'Entity.RoutingProductId'" widthfactor="2"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlan'"></vr-datagridcolumn>
-    <vr-datagridcolumn headertext="'Default Services'" fixedwidth="90">
+    <vr-datagridcolumn headertext="'Default Services'" widthfactor="2">
         <vr-whs-be-services-viewer on-ready="dataItem.onServiceViewerReady"></vr-whs-be-services-viewer>
     </vr-datagridcolumn>
     <vr-datagridexpandablerow>
