change title name
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44594

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/EmailAttachmentsRuntimeTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/EmailAttachmentsRuntimeTemplate.html
@@ -3,7 +3,7 @@
         <vr-common-mailmessagetemplate-selector on-ready="scopeModel.onMailMessageTemplateDirectiveReady"></vr-common-mailmessagetemplate-selector>
     </vr-columns>
     <vr-columns width="1/2row" ng-if="scopeModel.showIncludeSentInvocies">
-        <vr-switch value="scopeModel.includeSentInvoices" label="Inculde Sent Invoices"></vr-switch>
+        <vr-switch value="scopeModel.includeSentInvoices" label="Include Sent Invoices"></vr-switch>
     </vr-columns>
     <vr-columns width="fullrow" >
         <vr-datagrid datasource="ctrl.datasource" norowhighlightonclick="true" maxheight="300px"
