adding path required if manual
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C44595

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/SaveInvoiceToFileRuntimeTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/AutomaticInvoiceAction/MainExtensions/Templates/SaveInvoiceToFileRuntimeTemplate.html
@@ -1,6 +1,6 @@
 ﻿<vr-row>
     <vr-columns width="1/2row" >
-        <vr-textbox value="scopeModel.locationPath" label="Location Path"></vr-textbox>
+        <vr-textbox value="scopeModel.locationPath" label="Location Path" isrequired="scopeModel.isPathRequired"></vr-textbox>
     </vr-columns>
 
         <vr-columns width="fullrow">
