--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Order/Templates/RouteRuleOrderDirective.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/Extensions/RouteRuleSettings/Order/Templates/RouteRuleOrderDirective.html
@@ -16,7 +16,7 @@
                 <vr-datagridcolumn headertext="'Option Order'" field="'name'" widthfactor="5" disablesorting="true"></vr-datagridcolumn>
                 <vr-datagridcolumn headertext="'Percentage'" ng-show="scopeModel.showPercentage()" widthfactor="5" disablesorting="true">
                     <div>
-                        <vr-textbox value="dataItem.percentageValue" type="number" maxvalue="100" isrequired="true"></vr-textbox>
+                        <vr-textbox value="dataItem.percentageValue" type="number" maxvalue="100" isrequired="true" tonextinput></vr-textbox>
                     </div>
                 </vr-datagridcolumn>
                 <vr-datagridcolumn disablesorting="true">
